--- a/Vicinity.xcodeproj/xcshareddata/xcschemes/Vicinity.xcscheme
+++ b/Vicinity.xcodeproj/xcshareddata/xcschemes/Vicinity.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3509B97D1819C0E70093F714"
-               BuildableName = "Vicinity.app"
+               BuildableName = "BBGBB.app"
                BlueprintName = "Vicinity"
                ReferencedContainer = "container:Vicinity.xcodeproj">
             </BuildableReference>
@@ -53,7 +53,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3509B97D1819C0E70093F714"
-            BuildableName = "Vicinity.app"
+            BuildableName = "BBGBB.app"
             BlueprintName = "Vicinity"
             ReferencedContainer = "container:Vicinity.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3509B97D1819C0E70093F714"
-            BuildableName = "Vicinity.app"
+            BuildableName = "BBGBB.app"
             BlueprintName = "Vicinity"
             ReferencedContainer = "container:Vicinity.xcodeproj">
          </BuildableReference>
@@ -90,7 +90,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3509B97D1819C0E70093F714"
-            BuildableName = "Vicinity.app"
+            BuildableName = "BBGBB.app"
             BlueprintName = "Vicinity"
             ReferencedContainer = "container:Vicinity.xcodeproj">
          </BuildableReference>
